# intelligence-explosion-detection

./: .coverage  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  assessment_20250723_151334.json  pyproject.toml  requirements-dev.txt  requirements.txt  research_findings.db
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  intelligence-explosion-detection.md  mentorship_request.md  methodology_submission.md  research_discussion.md  research_results.md  security_vulnerability.md
.github/workflows/: ai-safety-ci.yml  contributors.yml  deploy-spaces.yml  enable-discussions.yml  i18n.yml
ai_intelligence_explosion_redteam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
datasets/: research_findings.db
docs/: INTERNATIONALIZATION.md  MODEL_CARD_TEMPLATE.md  github-organization-setup.md
huggingface_spaces/: MODEL_CARD_TEMPLATE.md  README.md  app.py  requirements.txt  safety_scores.db
notebooks/: README.md
scripts/: check_translations.py  deploy_to_spaces.py  update_spaces.py
src/: __init__.py  dashboard_README.md  main.py  redteam_assessment_gpt-4_20250723_161500.json
src/intelligence_explosion/: __init__.py  compliance.py  detector.py  i18n.py  monitoring.py  pyrit_integration.py
src/intelligence_explosion/translations/: en.json  ko.json
tests/: test_detector.py
translations/: en.json  ko.json
