[project]
name = "ai-intelligence-explosion-redteam"
version = "0.1.0"
description = "Specialized red team system for detecting AI intelligence explosion and emergent phenomena"
authors = [
    {name = "AI Safety Red Team", email = "contact@ai-redteam.org"}
]
readme = "README.md"
license = {text = "MIT + RAIL"}
requires-python = ">=3.8"
keywords = ["ai-safety", "red-team", "intelligence-explosion", "emergence-detection", "ml-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=23.2.0",
    "aiohttp>=3.9.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "tokenizers>=0.15.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    "structlog>=23.2.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "isort>=5.13.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
enterprise = [
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "boto3>=1.34.0",
]
ml-advanced = [
    "torch-audio>=2.1.0",
    "torch-vision>=0.16.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/ai-redteam/intelligence-explosion-detection"
Documentation = "https://ai-redteam.github.io/intelligence-explosion-detection"
Repository = "https://github.com/ai-redteam/intelligence-explosion-detection"
Issues = "https://github.com/ai-redteam/intelligence-explosion-detection/issues"

[project.scripts]
ai-redteam = "src.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "compliance: marks tests as compliance validation tests",
    "security: marks tests as security-related tests",
]
